# parametric-transfer-operator

./: .gitignore  LICENSE  LICENSE.txt  README.md  dodo.py  muto-env.def  plot_gfem_function.py  pyproject.toml  test_transfer.py
figures/: README.md
journal/: README.md
notes/: ei_parageom.md  mu_sep.md
optimization/hrrf/: fom_minimization_data.out  rom_minimization_data.out
output/: conf_0.9.h5  conf_0.9.xdmf  conf_1.h5  conf_1.xdmf  trivial.h5  trivial.xdmf
paper/: README.md  eccomas-2024-paper-instructions.tex  eccomas_paper-2024.cls  paper.tex  references.bib
paper/img/: halfbeam.tex  oversampling_domain.tex  traeger.tex  transformationmap.tex
src/: proceedings.mplstyle  thesis-halfwidth.mplstyle  thesis.mplstyle
src/beam/: README.md  decompose_pod_basis.py  definitions.py  extension.py  fom.py  fom_test_set.py  generate_hapod_table.py  generate_heuristic_table.py  generate_minimization_comparison_table.py  generate_minimization_data_table.py  heuristic_range_approx.py  locmor.md  locmor.py  modularization.md  optimization.py  plot_locrom_error.py  plot_optimization_data.py  plot_projerr.py  plot_svals.py  preprocessing.py  projerr.py  range_approx_edge.py  rom.py  run_locrom.py  tasks.py  test_coo_assembly.py
src/beam/debug/: npy_to_xdmf.py
src/beam/figures/: beam_sketch.tex
src/beam/tables/: hapod_inner.tex  heuristic_inner.tex  minimization_comparison.tex  minimization_data.tex
src/figures/: README.md
src/getting_started/: README.md  coarse_scale_basis.py  decompose_pod_basis.py  definitions.py  extension.py  fom.py  fom_test_set.py  lhs.py  locmor.py  optimization.py  plot_projerr.py  plot_svals.py  preprocessing.py  projerr.py  range_approx_edge.py  range_approximation.py  realizations.npy  rom.py  run_locrom.py  tasks.py  test_coo_operator.py  test_logging.py  test_multivariate_sampling.py  write_xi.py
src/getting_started/debug/: xdmf_to_vtx.py
src/parageom/: README.md  auxiliary_problem.py  beam_check.py  check_gfem_quality.py  check_svals_bound.py  custom_assembler.py  definitions.py  dofmap_gfem.py  ei.py  ei_map.py  eval_rom.py  extension.py  fom.py  gfem.py  hapod.py  heuristic.py  lhs.py  locmor.py  matrix_based_operator.py  monorom.py  notes.md  optimization.py  osp_v2.py  parametric_extension.py  parse_opt_data_mu_min.py  plot_kappa.py  plot_max_projerr.py  plot_mean_basis_length.py  plot_mean_num_dofs.py  plot_projerr.py  plot_projerr_1.py  plot_romerr.py  plot_svals_hapod.py  plot_svals_osp.py  plot_svals_simple.py  postprocessing.py  pp_stress.py  preprocessing.py  projerr.py  realizations.npy  (+22 more)
system/: README.md
tables/: README.md
