[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "parageom"
readme = "README.md"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/parageom"]

[tool.doit]
backend = "dbm"

[tool.doit.commands.list]
sort = "definition"

[tool.ruff]
line-length = 120
